src/objects/AddeProp__c.object
<CustomObject>
    <description>for recording props sent from Slack</description>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AddeProp</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Props</fullName>
        <columns>Sender__c</columns>
        <columns>UserName__c</columns>
        <columns>Reason__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Props</label>
    </listViews>
    <nameField>
        <displayFormat>ap{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AddeProp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>